FIX: Move safe spacing from margin to padding and add positioning context to survey

--- a/Assets/Common/surveyjs/vibeup-surveyjs.css
+++ b/Assets/Common/surveyjs/vibeup-surveyjs.css
@@ -575,6 +575,7 @@ textarea.form-control {
   position: absolute;
   border: 2px solid #f4f1ef;
   left: 50%;
+  bottom: calc(-1px * env(safe-area-inset-bottom));
   transform: translate(-50%);
 }
 
