--- a/Assets/Common/vibeup-theme.css
+++ b/Assets/Common/vibeup-theme.css
@@ -5,12 +5,12 @@ body {
   /* Required since 100% excludes unsafe areas */
   height: 100vh;
   background-color: #f4f1ef !important;
+}
+body {
+  /* To push first page element out from under header */
+  padding-top: env(safe-area-inset-top);
   /* To create new box formatting context */
   display: flow-root;
-}
-/* To push first page element out from under header */
-body > :first-child {
-  margin-top: env(safe-area-inset-top);
 }
 
 button,
